Changelog

v3.1.1
* CSS & JS automatically take LUMIERE_VERSION string in URL when they're called, so every new Lumière! version trigger a cache refresh

v3.1
* Major: Due to compatibility reasons with Gutenberg, the way to call links for internal popupups has changed from '<!--imdb--><!--/imdb-->' to '<span class="lumiere_link_maker"></span>'. Compatibility with the old way currently maintained.
* Major: Finished Gutenberg interface, two buttons added.
* Major: Updated to IMDbPHP 6.5.1 library.
* Caching system: Changed the path of Lumière! cache (now in wp-content/cache) so it will survive the plugin updates. If wp-content/cache is not writable, it uses wp-content/plugins/lumiere/cache path.
* Caching layout: Vastly simplified the cache menu. Moved the paths options to manage cache submenu (options are hidden by default), merged store and use cache (store is not available anymore), removed the zip options.
* General options layout: polished general options, moved many option to advanced tab, should be easier to understand
* Minor: Variable imdbcachedetails set to true by default (no real reason to not show the cache management) in options-cache.php and config.php
* Bug: the lumiere's scripts weren't loaded outside the Lumiere's dedicated pages. Removed checks in lumiere_add_footer_blog()'s lumiere-movies.php, deactivated calls to head and footer construction for imbd-movies.inc.php in lumiere-movies.php and widget (head and footer are already loaded!)
* Bug: removed CSP compliance in js/lumiere_scripts.js and js/highslide-options.js as it prevented a correct running of the highslide popups -> highslide should close windows under CSP
* Bug: Removed adding automatically image in tinyMCE, I can't get rid of it when posting (imdbImg in lumiere_admin_tinymce_editor.js)
* Bug: uninstall wasn't removing taxonomy terms. Simplified the function and now it works.