@@ -2,6 +2,8 @@ Changelog
 
 v3.1.1
 * CSS & JS automatically take LUMIERE_VERSION string in URL when they're called, so every new Lumière! version trigger a cache refresh
+* Added into popups and imdb-movies.inc movie/people images the code 'loading="eager"' so they're not lazy-loaded (otherwise they're not displayed)
+* Bug: Taxonomy was not registred and not appearing in Posts, fixed function lumiere_create_taxonomies()
 
 v3.1
 * Major: Due to compatibility reasons with Gutenberg, the way to call links for internal popupups has changed from '<!--imdb--><!--/imdb-->' to '<span class="lumiere_link_maker"></span>'. Compatibility with the old way currently maintained.
